--- a/html/contacts.html
+++ b/html/contacts.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Davide Frau">
     <meta name="description" content="My name is Davide, welcome to my page">
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico">
     <title>Davide Frau | Home page</title>
 
     <!-- Open Graph -->
