--- a/html/contacts.html
+++ b/html/contacts.html
@@ -32,7 +32,7 @@
         <label for="check" class="check-btn">
             <i class="bx bx-menu"></i>
         </label>
-        <label class="logo"><a href="index.html">Davide.</a></label>
+        <label class="logo"><a href="/">Davide.</a></label>
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="projects.html">Projects</a></li>
