--- a/html/about.html
+++ b/html/about.html
@@ -9,24 +9,19 @@
     <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico">
     <title>Davide Frau | Home page</title>
 
-    <!-- Open Graph -->
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Davide Frau | Web Developer"/>
     <meta property="og:url" content="https://davidefrau.netlify.app/"/>
     <meta property="og:description" content="Hi, i'm Davide, a Full Stack Development student"/>
 
-    <!-- Link CSS -->
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="stylesheet" href="/assets/css/about.css">
-    
-    <!-- Font Google e Boxicons-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;600&display=swap" rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    <!-- navbar -->
     <nav>
         <input type="checkbox" id="check">
         <label for="check" class="check-btn">
@@ -40,30 +35,18 @@
             <li><a href="contacts.html">Contacts</a></li>
         </ul>
     </nav>
-
-    <!-- contenuto della pagina - CHI SONO -->
     <section>
-        <div class="container">
-            <div class="about">
-                <!-- about me -->
-                    <h1>About me</h1>
+        <div class="about">
+            <h1>About me</h1>
+            <ul class="social">
+                <li><a href="https://github.com/davfrau94" target="_blank"><i class='bx bxl-github'></i></a></li>
+                <li><a href="https://www.linkedin.com/in/davide-frau/" target="_blank"><i class='bx bxl-linkedin'></i></a></li>
+                <li><a href="https://www.instagram.com/dav_frau/?igshid=NzZlODBkYWE4Ng%3D%3D&utm_source=qr" target="_blank"><i class='bx bxl-instagram-alt'></i></a></li>
+            </ul>
 
-                <!-- link ai social -->
-                <ul class="social">
-                    <li><a href="https://github.com/davfrau94" target="_blank"><i class='bx bxl-github'></i></a></li>
-
-                    <li><a href="https://www.linkedin.com/in/davide-frau-b79b84296/" target="_blank"><i class='bx bxl-linkedin'></i></a></li>
-
-                    <li><a href="https://www.instagram.com/dav_frau/?igshid=NzZlODBkYWE4Ng%3D%3D&utm_source=qr" target="_blank"><i class='bx bxl-instagram-alt'></i></a></li>
-                </ul>
-
-                <p>Hei, my name is Davide. I was born in 1994 and raised in Sardinia. I have a background in computer accounting, and after years of working in hospitality and in restaurant industry, I returned to studying computer science, web development, and data analysis. Currently, I am a student of Web Development, aiming to become a 
-                <a class="active" href="
-                https://www.start2impact.it" target="_blank">Full Stack Developer</a>. Over the years, I have developed many passions, including personal growth, finance, philosophy, psychology, sports, nutrition, and much more. Here you can access my <a class="active" href="/assets/CV.pdf" target="_blank">CV</a> with my personal information.</p>
-                <h2>Contact me?</h2>
-                <p>Write me on <a class="active" href="https://www.instagram.com/dav_frau/?igshid=NzZlODBkYWE4Ng%3D%3D&utm_source=qr" target="_blank">Instagram</a>, or fill out this <a class="active" href="contacts.html">form</a>.</p>
-
-            </div>
+            <p>Hei, my name is Davide. I was born in 1994 and raised in Sardinia. I have a background in computer accounting, and after years of working in hospitality and in restaurant industry, I returned to studying computer science, web development, and data analysis. Currently, I am a student of Web Development, aiming to become a <a class="active" href="https://www.start2impact.it" target="_blank">Full Stack Developer</a>. Over the years, I have developed many passions, including personal growth, finance, philosophy, psychology, sports, nutrition, and much more. Here you can access my <a class="active" href="/assets/CV.pdf" target="_blank">CV</a> with my personal information.</p>
+            <h2>Contact me?</h2>
+            <p>Write me on <a class="active" href="https://www.instagram.com/dav_frau/?igshid=NzZlODBkYWE4Ng%3D%3D&utm_source=qr" target="_blank">Instagram</a>, or fill out this <a class="active" href="contacts.html">form</a>.</p>
         </div>
     </section>
 </body>
