--- a/html/projects.html
+++ b/html/projects.html
@@ -43,12 +43,12 @@
                 <span class="project-name">
                     <a href="https://supermariojump-counter.netlify.app/">Super Mario Jump Counter</a>
                 </span>
-                <span class="project-date">Feb 25, 2024</span>
+                <span class="project-date">Feb 24, 2024</span>
             </div>
 
             <div class="project-row">
                 <span class="project-name">
-                    <a href="https://supermariojump-counter.netlify.app/">Calculator</a>
+                    <a href="https://clock-and-calculator.netlify.app/">Digital Clock & Calculator</a>
                 </span>
                 <span class="project-date">Feb 9, 2024</span>
             </div>
