new-asset + links

--- a/assets/html/about.html
+++ b/assets/html/about.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Davide Frau">
     <meta name="description" content="My name is Davide, welcome to my page">
     <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico">
-    <title>Davide Frau | Home page</title>
+    <title>Davide Frau | About</title>
 
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Davide Frau | Web Developer"/>
@@ -44,7 +44,7 @@
                 <li><a href="https://www.instagram.com/dav_frau/?igshid=NzZlODBkYWE4Ng%3D%3D&utm_source=qr" target="_blank"><i class='bx bxl-instagram-alt'></i></a></li>
             </ul>
 
-            <p>Hei, my name is Davide. I was born in 1994 and raised in Sardinia. I have a background in computer accounting, and after years of working in hospitality and in restaurant industry, I returned to studying computer science, Web Development, and Data Analysis. Currently, I am a student of Web Development, aiming to become a <a class="active" href="https://www.start2impact.it" target="_blank">Full Stack Developer</a>. Over the years, I have developed many passions, including personal growth, finance, philosophy, psychology, sports, nutrition, and much more. Here you can access my <a class="active" href="/assets/CV.pdf" target="_blank">CV</a> with my personal information.</p>
+            <p>Hey, my name is Davide. I was born in 1994 and raised in Sardinia. I have a background in computer accounting, and after years of working in hospitality and in restaurant industry, I returned to studying computer science, Web Development, and Data Analysis. Currently, I am a student of Web Development, aiming to become a <a class="active" href="https://www.start2impact.it" target="_blank">Full Stack Developer</a>. Over the years, I have developed many passions, including personal growth, finance, philosophy, psychology, sports, nutrition, and much more. Here you can access my <a class="active" href="/assets/CV.pdf" target="_blank">CV</a> with my personal information.</p>
             <h2>Contact me?</h2>
             <p>Write me on <a class="active" href="https://www.instagram.com/dav_frau/?igshid=NzZlODBkYWE4Ng%3D%3D&utm_source=qr" target="_blank">Instagram</a>, or fill out this <a class="active" href="contacts.html">form</a>.</p>
         </div>
