--- a/assets/html/contacts.html
+++ b/assets/html/contacts.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Davide Frau">
     <meta name="description" content="My name is Davide, welcome to my page">
     <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico">
-    <title>Davide Frau | Home page</title>
+    <title>Davide Frau | Contacts</title>
 
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Davide Frau | Web Developer"/>
