--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <label class="logo"><a href="index.html">Davide.</a></label>
         <ul>
             <li><a class="active" href="index.html">Home</a></li>
-            <li><a href="html/projects.html">Projects</a></li>
-            <li><a href="html/about.html">About</a></li>
-            <li><a href="html/contacts.html">Contacts</a></li>
+            <li><a href="/assets/html/projects.html">Projects</a></li>
+            <li><a href="/assets/html/about.html">About</a></li>
+            <li><a href="/assets/html/contacts.html">Contacts</a></li>
         </ul>
     </nav>
 
