--- a/assets/html/projects.html
+++ b/assets/html/projects.html
@@ -7,9 +7,9 @@
     <meta name="author" content="Davide Frau">
     <meta name="description" content="My name is Davide, welcome to my page">
     <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico">
-    <title>Davide Frau | Home page</title>
+    <title>Davide Frau | Projects</title>
 
-    <meta property="og:type" content="website" />
+    <meta property="og:type" content="website"/>
     <meta property="og:title" content="Davide Frau | Web Developer"/>
     <meta property="og:url" content="https://davidefrau.netlify.app/"/>
     <meta property="og:description" content="Hi, i'm Davide, a Full Stack Development student"/>
