memory-game-project-commit

--- a/assets/html/projects.html
+++ b/assets/html/projects.html
@@ -41,6 +41,13 @@
 
             <div class="project-row">
                 <span class="project-name">
+                    <a href="https://memory-cg.netlify.app/">Memory Game</a>
+                </span>
+                <span class="project-date">Mar 13, 2024</span>
+            </div>
+
+            <div class="project-row">
+                <span class="project-name">
                     <a href="https://supermariojump-counter.netlify.app/">Super Mario Jump Counter</a>
                 </span>
                 <span class="project-date">Feb 24, 2024</span>
